# intent-driven-data-mart-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  errors.py  main.py
app/routers/: __init__.py  marts.py
application/: __init__.py  mart_service.py
dbt_codegen/: __init__.py  _constants.py  model_generator.py  schema.py  schema_yaml_generator.py  sources_yaml_generator.py
docs/: api.md  architecture.md  intent_spec.md
intent/: parser.py  schema.py  validator.py
mart_design/: designer.py  schema.py  sql_generator.py  validator.py
mcp/: server.py  tools.py
metadata/: bigquery_reader.py  connector.py  reader.py  schema.py  schema_reader.py
prompts/: intent_extraction.md  mart_proposal.md  sql_generation.md
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py  test_dbt_artifact_integration.py  test_schema_reader_integration.py  test_service_integration.py
tests/unit/: test_api_errors.py  test_api_marts.py  test_bigquery_schema_reader.py  test_dbt_artifact_bundle.py  test_dbt_model_generator.py  test_dbt_schema_yaml_generator.py  test_dbt_sources_yaml_generator.py  test_designer.py  test_intent_parser.py  test_intent_validator.py  test_mart_service.py  test_mart_spec_validator.py  test_mcp_tools.py  test_schema_reader.py  test_schema_reader_abstraction.py  test_sql_generator.py
