[project]
name = "intent-driven-data-mart-platform"
version = "0.1.0"
description = "An intent-driven platform that analyzes data warehouse schemas and proposes or generates data marts."
requires-python = ">=3.11"
dependencies = [
    # LLM
    "anthropic>=0.25.0",
    # MCP
    "mcp>=1.0.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    # Data models
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Data warehouse (MVP)
    "duckdb>=0.10.0",
    # Environment
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
